Updated Home Page

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Roboto&family=Poppins&family=Open+Sans&family=Merriweather&family=Monoton&family=Pacifico&family=Playfair+Display&family=Quicksand&family=Work+Sans&family=Fredoka+One&family=Bangers&family=Abril+Fatface&family=Alfa+Slab+One&family=Amatic+SC&family=Chewy&family=Press+Start+2P&display=swap" rel="stylesheet">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My PortFolio</title>
   </head>
