--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
 
   <body>
-    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+   
   <style>
     body, html {
       margin: 0;
@@ -29,7 +29,7 @@
       background: transparent;
     }
   </style>
-</head>
+
 <body>
   <div id="particles-js"></div>
   <script>
@@ -45,9 +45,9 @@
         shape: {
           type: 'image',  // Use image for particles
           image: {
-            src: 'https://static.vecteezy.com/system/resources/previews/009/887/179/non_2x/white-flower-free-png.png',  // Replace with your flower image URL
-            width: 20,
-            height: 20
+            src: "src/assets/images/images.png",  // Replace with your flower image URL
+            width: 100,
+            height: 100
           }
         },
         opacity: {
@@ -61,7 +61,7 @@
           }
         },
         size: {
-          value: 10,
+          value: 20,
           random: true,
           anim: {
             enable: true,
