--- a/index.html
+++ b/index.html
@@ -33,12 +33,83 @@
 <body>
   <div id="particles-js"></div>
   <script>
-    
+    particlesJS('particles-js', {
+      particles: {
+        number: {
+          value: 100,
+          density: {
+            enable: true,
+            value_area: 800
+          }
+        },
+        shape: {
+          type: 'image',  // Use image for particles
+          image: {
+            src: "src/assets/images/images.png",  // Replace with your flower image URL
+            width: 100,
+            height: 100
+          }
+        },
+        opacity: {
+          value: 0.6,
+          random: true,
+          anim: {
+            enable: true,
+            speed: 1,
+            opacity_min: 0.1,
+            sync: false
+          }
+        },
+        size: {
+          value: 20,
+          random: true,
+          anim: {
+            enable: true,
+            speed: 4,
+            size_min: 1,
+            sync: false
+          }
+        },
+        line_linked: {
+          enable: false  // Disable links between particles
+        },
+        move: {
+          enable: true,
+          speed: 5,
+          direction: 'bottom-right',  // Wind blowing towards top-right (diagonal)
+          random: true,
+          straight: false,
+          out_mode: 'out',  // Particles disappear when they go out of bounds
+          bounce: false
+        }
+      },
+      interactivity: {
+        detect_on: 'canvas',
+        events: {
+          onhover: {
+            enable: true,
+            mode: 'repulse'
+          },
+          onclick: {
+            enable: true,
+            mode: 'push'
+          }
+        },
+        modes: {
+          repulse: {
+            distance: 100,
+            duration: 1
+          },
+          push: {
+            particles_nb: 4
+          }
+        }
+      },
+      retina_detect: true
+    });
   </script>
 
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx">
-      
-    </script>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
