--- a/index.html
+++ b/index.html
@@ -110,6 +110,6 @@
   </script>
 
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="src/main.jsx"></script>
   </body>
 </html>
